# orcamaster

./: .env.example  .gitignore  docker-compose.yml  pytest.ini
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_cronograma_config.py  0003_proposta_config.py  0004_composicao_unique_codigo.py  0005_clientes_fornecedores.py  0006_diario_obras.py  0007_contratos_aditivos.py  0008_insumo_item.py
backend/app/: config.py  database.py  dependencies.py  main.py  scheduler.py
backend/app/models/: __init__.py  bdi.py  cliente.py  composicao.py  contrato.py  cronograma_linha.py  diario.py  empresa.py  fornecedor.py  grupo.py  insumo.py  insumo_item.py  item.py  medicao.py  obra.py  pacote_job.py  proposta_config.py  usuario.py  versao.py
backend/app/routers/: agente.py  alertas.py  auth.py  bdi.py  clientes.py  composicoes.py  contratos.py  cronograma.py  curva_abc.py  dashboard.py  diario.py  empresa.py  fornecedores.py  grupos.py  insumo_item.py  medicoes.py  obras.py  pacote.py  planilha_import.py  proposta.py  relatorios.py  usuarios.py  versoes.py
backend/app/schemas/: agente.py  alerta.py  auth.py  bdi.py  cliente.py  composicao.py  contrato.py  cronograma.py  curva_abc.py  dashboard.py  diario.py  fornecedor.py  grupo.py  insumo_item.py  item.py  medicao.py  obra.py  pacote.py  planilha_import.py  proposta.py  relatorios.py  usuario.py  versao.py
backend/app/services/: agente_service.py  auth_service.py  bdi_service.py  composicao_service.py  diario_pdf.py  pacote_service.py  (+4 more)
(+167 files in other folders)
