[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "orcaavml-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "pydantic==2.10.3",
    "pydantic-settings==2.7.0",
    "email-validator==2.2.0",
    "psycopg2-binary==2.9.10",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "apscheduler==3.10.4",
    "python-multipart==0.0.20",
    "weasyprint==69.0",
    "openpyxl==3.1.5",
    "jinja2>=3.1",
    "anthropic==0.40.0",
    "pypdf>=4.0",
    "bcrypt>=3.0,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "httpx==0.28.1",
    "pytest-cov==6.0.0",
    "factory-boy==3.3.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
